--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Document</title>
+<title>慕白 CSDN-博客</title>
 <style>
 body{padding:0;margin:0;}
 ul,li{list-style: none;padding:0;margin:0;}
@@ -18,6 +18,8 @@ a{color:#000;font-size:14px;text-decoration: none;font-family: "宋体";}
 </style>
 </head>
 <body>
+   <h1>aa</h1>
+   <h4>慕白 CSDN-博客</h4>
    <div id="nav">
 		<ul class="nav_list">
 	         <li><a href="javascript:;">新随笔</a></li>
