--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <style>
 body{padding:0;margin:0;}
 ul,li{list-style: none;padding:0;margin:0;}
+h1{height:50px;background:#666;}
 #nav{height: 30px;background:#f6f6f6;position: relative;}
 .nav_num, .nav_list{height: 30px;position: absolute;top:0;left:39%;}
 #nav li{height: 30px;float: left;margin-left:20px;line-height: 30px;padding:0 5px 0 5px;}
@@ -18,8 +19,7 @@ a{color:#000;font-size:14px;text-decoration: none;font-family: "宋体";}
 </style>
 </head>
 <body>
-   <h1>aa</h1>
-   <h4>慕白 CSDN-博客</h4>
+   <h1>慕白 CSDN-博客</h1>
    <div id="nav">
 		<ul class="nav_list">
 	         <li><a href="javascript:;">新随笔</a></li>
