--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <title>慕白 CSDN-博客</title>
 <style>
-body{padding:0;margin:0;}
-ul,li{list-style: none;padding:0;margin:0;}
+body,h1,h2,h3,h4,h5{padding:0;margin:0;}
+ul,li,{list-style: none;padding:0;margin:0;}
 h1{height:50px;background:#666;}
 #nav{height: 30px;background:#f6f6f6;position: relative;}
 .nav_num, .nav_list{height: 30px;position: absolute;top:0;left:39%;}
