--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>慕白 CSDN-博客</title>
 <style>
 body,h1,h2,h3,h4,h5{padding:0;margin:0;}
-ul,li,{list-style: none;padding:0;margin:0;}
+ul,li{list-style: none;padding:0;margin:0;}
 h1{height:50px;background:#666;}
 #nav{height: 30px;background:#f6f6f6;position: relative;}
 .nav_num, .nav_list{height: 30px;position: absolute;top:0;left:39%;}
@@ -14,8 +14,8 @@ a{color:#000;font-size:14px;text-decoration: none;font-family: "宋体";}
 .nav_list li a{font-weight:bold;}
 .nav_num{position: absolute;top:0;left:78%;color:#666;}
 .nav_num a{font-size:12px;color:#666;}
-.nav_num li:hover{background: #ccc;text-decoration: none;}
-.nav_list li:hover{background: #ccc;text-decoration: none;}
+.nav_num li:hover{background: #ccc;}
+.nav_list li:hover{background: #ccc;}
 </style>
 </head>
 <body>
